<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <!-- Primeiro item do menu -->
    
   <item
        android:id="@+id/centralAjuda"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/centralAjuda"/>
        
    <item
        android:id="@+id/politPrivacidade"
        android:icon="@drawable/ic_lampada"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/politicPrivacidade"/>
       
    <item
        android:id="@+id/tutorial"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/tutorial"/>
    
    <item
        android:id="@+id/configuracao"
        android:title="@string/configuracao"
        android:orderInCategory="400"
        android:icon="@drawable/ic_lampada"/>
        
    <item
        android:id="@+id/sobre"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/sobre"/>

    <item
        android:id="@+id/sair"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/Sair"/>

</menu>
