<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="382dp"
      android:background="#fff" >

      <!-- Header  Starts -->

      <LinearLayout
          android:id="@+id/header"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:background="@layout/header_gradient"
          android:paddingBottom="5dip"
          android:paddingTop="5dip" >

          <!-- Logo Start -->

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="44dp"
              android:layout_marginLeft="10dip"
              android:contentDescription="@string/imgConfig"
              android:src="@drawable/ic_people" />
          <!-- Logo Ends -->
      </LinearLayout>

      <LinearLayout
          android:id="@+id/linearLayout1"
          android:layout_width="241dp"
          android:layout_height="376dp"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/header"
          android:orientation="vertical"
          android:weightSum="1">

          <TextView
              android:id="@+id/login"
              android:layout_width="308dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:text="@string/login"
              android:textColor="#372c24" />

          <EditText
              android:id="@+id/etUsuario"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:hint="@string/infoLogin"
              android:singleLine="true" />

          <TextView
              android:id="@+id/senha"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/senha"
              android:textColor="#372c24" />

          <EditText
              android:id="@+id/etSenha"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="102dp"
              android:ems="10"
              android:hint="@string/infoSenha"
              android:singleLine="true" />

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/endServidor" />

          <EditText
              android:id="@+id/etEndereco"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:hint="@string/infoServidro" >

              <requestFocus />
          </EditText>

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="59dp" >

              <TextView
                  android:id="@+id/porta_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/confporta" />

              <EditText
                  android:id="@+id/etPorta"
                  android:layout_width="80dp"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/porta_label"
                  android:inputType="number"
                  android:maxLength="5" />

              <RadioGroup
                  android:id="@+id/grPorta"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/etPorta" >

                  <RadioButton
                      android:id="@+id/httpPorta"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/confhttp" />

                  <RadioButton
                      android:id="@+id/httpsPorta"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/confhttps" />
              </RadioGroup>

          </RelativeLayout>

          <TextView
              android:id="@+id/confConexao"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/confVoltar"
              android:textColor="#025f7c"
              android:textSize="20sp" />

          <Button
              android:id="@+id/btnRegister"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/btnormal"
              android:text="@string/configSalvar" />

      </LinearLayout>

  </RelativeLayout>

</ScrollView>
