<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="#ffffff" >

      <!-- Header  Starts -->

      <LinearLayout
          android:id="@+id/header"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:background="@layout/header_gradient"
          android:paddingBottom="5dip"
          android:paddingTop="5dip" >

          <!-- Logo Start -->

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_people" />

          <!-- Logo Ends -->
      </LinearLayout>
      <!-- Header Ends -->
      <!-- Footer Start -->
      <!-- Footer Ends -->


      <!-- Login Form -->
      <!-- Login Form Ends -->

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:orientation="vertical"
          android:padding="10dip" >
      </LinearLayout>

      <Button
          android:id="@+id/btnLogin"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:background="@drawable/layout_bt_login"
          android:text="@string/btentrar" />


      <TextView
          android:id="@+id/link_to_register"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_above="@+id/btnLogin"
          android:layout_alignParentLeft="true"
          android:layout_marginBottom="20dp"
          android:gravity="center"
          android:text="@string/conexao"
          android:textColor="#0b84aa"
          android:textSize="20dip" />

      <RelativeLayout
          android:id="@+id/relativeLayout1"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent" >

          <RadioGroup
              android:id="@+id/grPorta"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp" >

          </RadioGroup>

          <TextView
              android:id="@+id/senha"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/login"
              android:layout_below="@+id/login"
              android:layout_marginTop="63dp"
              android:text="@string/senha" />

          <EditText
              android:id="@+id/etLogin"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_alignParentRight="true"
              android:layout_below="@+id/login"
              android:ems="10"
              android:hint="@string/infoLogin" />

          <TextView
              android:id="@+id/login"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_below="@+id/grPorta"
              android:layout_marginTop="169dp"
              android:text="@string/login" />

          <ImageView
              android:id="@+id/imageView1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBottom="@+id/login"
              android:layout_centerHorizontal="true"
              android:src="@drawable/logincadeado" />

          <EditText
              android:id="@+id/etSenha"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_alignParentRight="true"
              android:layout_below="@+id/senha"
              android:ems="10"
              android:inputType="textPassword" 
              android:hint="@string/infoSenha" />

          <CheckBox
              android:id="@+id/lembLogin"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_below="@+id/etSenha"
              android:text="@string/lembLogin" />

      </RelativeLayout>

  </RelativeLayout>

</ScrollView>
