<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@layout/header_gradient"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_people" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btAlarme"
        android:id="@+id/btAlarme"
        android:layout_below="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btEventos"
        android:layout_alignEnd="@+id/btEventos" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCameras"
        android:id="@+id/cameras"
        android:layout_below="@+id/btAlarme"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="false"
        android:layout_alignRight="@+id/btAlarme"
        android:layout_alignEnd="@+id/btAlarme" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btLogSeguranca"
        android:id="@+id/btEventos"
        android:layout_below="@+id/cameras"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
